# CG1-Engine

./: .gitignore  0output.ppm  1output.ppm  2output.ppm  3output.ppm  Cargo.toml  Checklist.md  NOTES.md  README.md  cg1  main.cpp  makefile  output.ppm  run.bat
engine/: camera.h  light.h  ray.h  scene.h
engine/shapes/: material.h  plane.h  shape.h  sphere.h
src/: camera.rs  main.rs  ray.rs  sphere.rs  user_interface.rs  vec.rs
src/engine/: camera.rs  light.rs  light_source.rs  mod.rs  plane.rs  ray.rs  scene.rs  sphere.rs
src/engine/shapes/: cilinder.rs  cone.rs  material.rs  mesh.rs  mod.rs  plane.rs  shape.rs  sphere.rs  texture.rs
src/scenes/: beach.rs  cilinder_test.rs  cone_test.rs  cones.rs  cube.rs  mod.rs  simple.rs  sphere_test.rs
src/utils/: matrix.rs  matrix3.rs  matrix4.rs  mod.rs  transform.rs  vec.rs  vec3.rs  vec4.rs
utils/: vec3.h
