[package]
name = "aula1_rust"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui = "0.12.0"
imgui-glow-renderer = "0.13.0"
imgui-sdl2-support = "0.13.0"
obj-rs = "0.7.4"
sdl2 = { version = "0.37.0", features = ["image"] }

[profile.release]
debug=false
opt-level=3
codegen-units=1
lto=true
overflow-checks=false
panic="abort"
